added static files

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -2,3 +2,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	@font-face {
+		font-family: 'anton';
+		src: url('/fonts/anton.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'mestizo';
+		src: url('/fonts/mestizo.woff2') format('woff2');
+	}
+}
