fix default highlighting

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -12,4 +12,7 @@
 		font-family: 'mestizo';
 		src: url('/fonts/mestizo.woff2') format('woff2');
 	}
+	a,button {
+		-webkit-tap-highlight-color: transparent;
+	}
 }
