--- a/src/app.postcss
+++ b/src/app.postcss
@@ -7,10 +7,12 @@
 	@font-face {
 		font-family: 'anton';
 		src: url('/fonts/anton.woff2') format('woff2');
+		font-display:swap;
 	}
 	@font-face {
 		font-family: 'mestizo';
 		src: url('/fonts/mestizo.woff2') format('woff2');
+		font-display:swap;
 	}
 	a,button {
 		-webkit-tap-highlight-color: transparent;
